k8s-manifests/order-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: ecommerce
  labels:
    app: order-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
      annotations:
        # Prometheus scraping configuration
        prometheus.io/scrape: "true"
        prometheus.io/port: "4002"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: order-service
          image: abhaytyagi1219/order-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
          readinessProbe:
            httpGet:
              path: /ready
              port: 4002
            initialDelaySeconds: 8
            periodSeconds: 6
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
