k8s-manifests/inventory-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: ecommerce
spec:
  selector:
    app: inventory-service
  ports:
    - port: 4003
      targetPort: 4003
  type: ClusterIP
