k8s-manifests/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mongo
  labels: 
    app: mongo
spec: 
  ports: 
   - port: 27017
     targetPort: 27017
  clusterIP: None
  selector: 
    app: mongo
