k8s-manifests/order-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
