k8s-manifests/user-service-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: user-service
spec: 
  selector: 
    app: user-service
  ports: 
    - port: 4001
      targetPort: 4001
  type: ClusterIP
